[tool.poetry]
name = "common-utils"
version = "0.1.0"
description = "Common utility functions for search engine microservices"
authors = ["Vlad-Sebastian Cretu <vlad.sebastian.cretu.dev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
retry-async = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
